--- a/package.json
+++ b/package.json
@@ -22,13 +22,21 @@
   },
   "homepage": "https://github.com/MiguelBragaGarcia/pay-stub-sign#readme",
   "dependencies": {
+    "eslint-config-airbnb-base": "15.0.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.8",
+    "@typescript-eslint/parser": "^5.42.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.2.2",
     "nodemon": "^2.0.20",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
