--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   },
   "homepage": "https://github.com/MiguelBragaGarcia/pay-stub-sign#readme",
   "dependencies": {
+    "@types/express": "^4.17.14",
+    "@types/multer": "^1.4.7",
     "eslint-config-airbnb-base": "15.0.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/jest": "^29.2.0",
