--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@types/multer": "^1.4.7",
     "eslint-config-airbnb-base": "15.0.0",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pdf-lib": "^1.17.1"
   },
   "devDependencies": {
     "@types/jest": "^29.2.0",
